Updated package information and the readme

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gatsby-starter-default",
-  "description": "Gatsby default starter",
+  "name": "unnatural-portfolio-website",
+  "description": "My portfolio website for Unnatural.nl build in Gatsby",
   "version": "1.0.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Dave Hoeks <dave@unnatural.nl>",
   "dependencies": {
     "gatsby": "next",
     "gatsby-plugin-react-helmet": "next",
@@ -27,6 +27,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://github.com/h00x/portfolio-website"
   }
 }
