Added styling to the website

--- a/package.json
+++ b/package.json
@@ -4,13 +4,21 @@
   "version": "1.0.0",
   "author": "Dave Hoeks <dave@unnatural.nl>",
   "dependencies": {
+    "emotion": "^9.2.6",
+    "emotion-server": "^9.2.6",
     "gatsby": "next",
-    "gatsby-plugin-react-helmet": "next",
+    "gatsby-plugin-emotion": "^1.1.17",
     "gatsby-plugin-manifest": "next",
     "gatsby-plugin-offline": "next",
+    "gatsby-plugin-react-helmet": "next",
+    "gatsby-plugin-typography": "^1.7.19",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-helmet": "^5.2.0"
+    "react-emotion": "^9.2.6",
+    "react-helmet": "^5.2.0",
+    "react-typography": "^0.16.13",
+    "typography": "^0.16.17",
+    "typography-theme-lawton": "^0.15.10"
   },
   "keywords": [
     "gatsby"
