--- a/package.json
+++ b/package.json
@@ -4,22 +4,22 @@
   "version": "1.0.0",
   "author": "Dave Hoeks <dave@unnatural.nl>",
   "dependencies": {
-    "emotion": "^9.2.6",
-    "emotion-server": "^9.2.6",
-    "gatsby": "next",
-    "gatsby-image": "^1.0.55",
-    "gatsby-plugin-emotion": "^1.1.17",
-    "gatsby-plugin-manifest": "next",
-    "gatsby-plugin-offline": "next",
-    "gatsby-plugin-react-helmet": "next",
-    "gatsby-plugin-sharp": "^1.6.48",
-    "gatsby-plugin-typography": "^1.7.19",
-    "gatsby-source-filesystem": "^1.5.39",
-    "gatsby-source-wordpress": "^2.0.93",
-    "gatsby-transformer-sharp": "^1.6.27",
+    "emotion": "^9.2.8",
+    "emotion-server": "^9.2.8",
+    "gatsby": "^2.0.0-rc.7",
+    "gatsby-image": "^2.0.0-rc.1",
+    "gatsby-plugin-emotion": "^2.0.0-rc.1",
+    "gatsby-plugin-manifest": "^2.0.2-rc.1",
+    "gatsby-plugin-offline": "^2.0.0-rc.2",
+    "gatsby-plugin-react-helmet": "^3.0.0-rc.1",
+    "gatsby-plugin-sharp": "^2.0.0-rc.3",
+    "gatsby-plugin-typography": "^2.2.0-rc.3",
+    "gatsby-source-filesystem": "^2.0.1-rc.1",
+    "gatsby-source-wordpress": "^3.0.0-rc.1",
+    "gatsby-transformer-sharp": "^2.1.1-rc.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-emotion": "^9.2.6",
+    "react-emotion": "^9.2.8",
     "react-helmet": "^5.2.0",
     "react-typography": "^0.16.13",
     "typography": "^0.16.17",
