Added responsiveness to the site

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-emotion": "^9.2.8",
     "react-helmet": "^5.2.0",
     "react-typography": "^0.16.13",
+    "react-waypoint": "^8.0.3",
     "typography": "^0.16.17",
     "typography-theme-lawton": "^0.15.10"
   },
