--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby": "^2.0.0-rc.7",
     "gatsby-image": "^2.0.0-rc.1",
     "gatsby-plugin-emotion": "^2.0.0-rc.1",
+    "gatsby-plugin-favicon": "^3.1.4",
     "gatsby-plugin-manifest": "^2.0.2-rc.1",
     "gatsby-plugin-offline": "^2.0.0-rc.2",
     "gatsby-plugin-react-helmet": "^3.0.0-rc.1",
